# vktest

./: .clangd  .gitignore  CMakeLists.txt  a.sh  env.sh  main.cpp  shader.comp  shader.spv  vkcall.txt
